--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://theme/chest.png")
+dock_filesystem_selected_paths=PackedStringArray("res://shaders/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://theme/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,15 +31,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=1
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/main.gd"]
 selected_script="res://scripts/main.gd"
-open_help=[]
+open_help=["DirAccess", "FileDialog"]
 script_split_offset=70
 list_split_offset=0
 
