sprite target added

--- a/.godot/export_credentials.cfg
+++ b/.godot/export_credentials.cfg
@@ -15,3 +15,18 @@ script_encryption_key=""
 codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
+
+[preset.3]
+
+script_encryption_key=""
+
+[preset.3.options]
+
+codesign/certificate_file=""
+codesign/certificate_password=""
+codesign/provisioning_profile=""
+notarization/apple_id_name=""
+notarization/apple_id_password=""
+notarization/api_uuid=""
+notarization/api_key=""
+notarization/api_key_id=""
